fixed mlh trust badge on mobile

--- a/src/style.scss
+++ b/src/style.scss
@@ -1122,3 +1122,9 @@ footer {
   text-align: center;
   margin: 0 auto;
 }
+
+#mlh-trust-badge {
+  @media (max-width: $br-medium) {
+    display: none;
+  }
+}
